atualiza agendamentos e mobilia das casas

--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                 quartos: 2,
                 banheiros: 2,
                 garagem: true,
-                agendamento: null,
+                agendamento: "18 / 02 / 2025 - A partir das 17h",
                 mobilia: "sem",
                 status: "available",
                 facebookUrl: "https://www.facebook.com/marketplace/item/1965257111057856/",
@@ -844,8 +844,8 @@
                 quartos: 2,
                 banheiros: 2,
                 garagem: true,
-                agendamento: null,
-                mobilia: "sem",
+                agendamento: "18 / 02 / 2025 - A partir das 17h",
+                mobilia: "semi",
                 status: "available",
                 facebookUrl: "https://www.facebook.com/marketplace/item/941324115060194/",
                 fotos: [
@@ -863,7 +863,7 @@
                 banheiros: 2,
                 garagem: false,
                 agendamento: null,
-                mobilia: "sem",
+                mobilia: "semi",
                 status: "available",
                 facebookUrl: "https://www.facebook.com/marketplace/item/2056715964911449/",
                 fotos: [
