badge disponivel com fundo solido

--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
         }
 
         .card__status-badge--available {
-            background: rgba(52, 211, 153, 0.15);
-            border: 1px solid rgba(52, 211, 153, 0.3);
-            color: var(--green);
+            background: #059669;
+            border: 1px solid #34d399;
+            color: #fff;
         }
 
         .card__status-badge--discarded {
