renomeia casas, descarta Rua Aurora, adiciona fotos Eco America

--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
         const casas = [
             {
                 id: 1,
-                nome: "Casa Jardim Italamar",
+                nome: "Casa Márcia",
                 contato: "Marcia",
                 telefone: "73 99810-1161",
                 preco: 1500,
@@ -836,7 +836,7 @@
             },
             {
                 id: 2,
-                nome: "Casa Rua Aurora",
+                nome: "Casa Rua Aurora (Descartada)",
                 contato: "Sara",
                 telefone: "(11) 97314-8901",
                 preco: 1500,
@@ -846,7 +846,7 @@
                 garagem: true,
                 agendamento: "18 / 02 / 2025 - A partir das 17h",
                 mobilia: "semi",
-                status: "available",
+                status: "discarded",
                 facebookUrl: "https://www.facebook.com/marketplace/item/941324115060194/",
                 fotos: [
                     "Rua Aurora - Goes Calmon/638275929_25814880101454060_5366175479839824541_n.jpg"
@@ -854,7 +854,7 @@
             },
             {
                 id: 3,
-                nome: "Casa Rua Aroeira",
+                nome: "Casa Vernon",
                 contato: "Proprietário",
                 telefone: "73 9151-6848",
                 preco: 1500,
@@ -904,7 +904,17 @@
                 mobilia: "sem",
                 status: "discarded",
                 facebookUrl: "#",
-                fotos: []
+                fotos: [
+                    "Condominio Eco America - 1400/534953944_1495013408181744_7442548002452847132_n.jpg",
+                    "Condominio Eco America - 1400/534894516_2159128607926844_6929777708402955147_n.jpg",
+                    "Condominio Eco America - 1400/534942225_1298606131816702_3856594512370582699_n.jpg",
+                    "Condominio Eco America - 1400/535019045_1524277141895273_1133493394192005957_n.jpg",
+                    "Condominio Eco America - 1400/535376710_1103714881267005_7036994203290793011_n.jpg",
+                    "Condominio Eco America - 1400/535432481_631263429703895_3920561479129621866_n.jpg",
+                    "Condominio Eco America - 1400/535438719_1642020896723269_1627533674656593854_n.jpg",
+                    "Condominio Eco America - 1400/541234426_782214624758448_6623135294006786075_n.jpg",
+                    "Condominio Eco America - 1400/571193804_1512231596639655_5800142737764555730_n.jpg"
+                ]
             }
         ];
 
