adiciona favicon de casa e atualiza agendamento Aurora

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análise de Imóveis</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏠</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -842,7 +844,7 @@
                 quartos: 2,
                 banheiros: 2,
                 garagem: true,
-                agendamento: "18 / 02 / 2025 - A partir das 17h",
+                agendamento: "Desmarcado - Casa descartada",
                 mobilia: "sem",
                 status: "discarded",
                 facebookUrl: "https://www.facebook.com/marketplace/item/941324115060194/",
