--- a/index.html
+++ b/index.html
@@ -159,6 +159,28 @@
             box-shadow: 0 0 20px var(--accent-glow);
         }
 
+        .btn-add-house {
+            border: 1px dashed var(--accent);
+            background: var(--accent-soft);
+            color: var(--accent);
+            padding: 8px 20px;
+            border-radius: 100px;
+            font-family: inherit;
+            font-size: 0.85rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+        }
+
+        .btn-add-house:hover {
+            background: rgba(124, 92, 252, 0.25);
+            box-shadow: 0 0 20px var(--accent-glow);
+            transform: translateY(-1px);
+        }
+
         /* ====== STATS BAR ====== */
         .stats {
             position: relative;
@@ -761,6 +783,173 @@
             font-size: 48px;
             margin-bottom: 12px;
         }
+
+        /* ====== FORM MODAL ====== */
+        .form-overlay {
+            position: fixed;
+            inset: 0;
+            z-index: 1000;
+            background: rgba(0, 0, 0, 0.88);
+            backdrop-filter: blur(8px);
+            display: none;
+            align-items: flex-start;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            overflow-y: auto;
+            padding: 40px 16px;
+        }
+
+        .form-overlay.open {
+            display: flex;
+            opacity: 1;
+        }
+
+        .form-modal {
+            background: var(--bg-secondary);
+            border: 1px solid var(--glass-border);
+            border-radius: var(--radius);
+            width: 100%;
+            max-width: 540px;
+            padding: 32px;
+            position: relative;
+        }
+
+        .form-modal__header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 28px;
+        }
+
+        .form-modal__title {
+            font-size: 1.3rem;
+            font-weight: 700;
+            color: var(--text-primary);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .form-modal__close {
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid var(--glass-border);
+            color: var(--text-secondary);
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            font-size: 1.1rem;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: var(--transition);
+        }
+
+        .form-modal__close:hover {
+            background: rgba(255, 255, 255, 0.12);
+            color: var(--text-primary);
+        }
+
+        .form-group {
+            margin-bottom: 16px;
+        }
+
+        .form-group label {
+            display: block;
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: var(--text-secondary);
+            margin-bottom: 6px;
+            text-transform: uppercase;
+            letter-spacing: 0.04em;
+        }
+
+        .form-group input,
+        .form-group select {
+            width: 100%;
+            padding: 10px 14px;
+            background: rgba(255, 255, 255, 0.04);
+            border: 1px solid var(--glass-border);
+            border-radius: var(--radius-sm);
+            color: var(--text-primary);
+            font-family: inherit;
+            font-size: 0.9rem;
+            transition: var(--transition);
+            outline: none;
+        }
+
+        .form-group input:focus,
+        .form-group select:focus {
+            border-color: var(--accent);
+            box-shadow: 0 0 12px var(--accent-glow);
+        }
+
+        .form-group input::placeholder {
+            color: var(--text-muted);
+        }
+
+        .form-group select option {
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+        }
+
+        .form-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+        }
+
+        .form-row-3 {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 12px;
+        }
+
+        .form-divider {
+            border: none;
+            border-top: 1px solid var(--glass-border);
+            margin: 20px 0;
+        }
+
+        .form-submit {
+            width: 100%;
+            padding: 14px;
+            background: var(--accent);
+            border: none;
+            border-radius: var(--radius-sm);
+            color: #fff;
+            font-family: inherit;
+            font-size: 0.95rem;
+            font-weight: 700;
+            cursor: pointer;
+            transition: var(--transition);
+            margin-top: 8px;
+        }
+
+        .form-submit:hover {
+            background: #6a4ce0;
+            box-shadow: 0 0 24px var(--accent-glow);
+            transform: translateY(-1px);
+        }
+
+        .form-hint {
+            font-size: 0.72rem;
+            color: var(--text-muted);
+            margin-top: 4px;
+        }
+
+        @media (max-width: 420px) {
+
+            .form-row,
+            .form-row-3 {
+                grid-template-columns: 1fr;
+            }
+
+            .form-modal {
+                padding: 20px;
+            }
+        }
     </style>
 </head>
 
@@ -778,6 +967,7 @@
         <button class="filter-btn active" data-filter="all">🏘️ Todas</button>
         <button class="filter-btn" data-filter="available">✅ Disponíveis</button>
         <button class="filter-btn" data-filter="discarded">❌ Descartadas</button>
+        <button class="btn-add-house" id="btnAddHouse" title="Cadastrar novo imóvel">＋ Novo Imóvel</button>
     </nav>
 
     <!-- STATS -->
@@ -801,13 +991,96 @@
         </div>
     </div>
 
+    <!-- FORM MODAL -->
+    <div class="form-overlay" id="formOverlay">
+        <div class="form-modal">
+            <div class="form-modal__header">
+                <div class="form-modal__title">🏠 Cadastrar Novo Imóvel</div>
+                <button class="form-modal__close" id="formClose" title="Fechar">✕</button>
+            </div>
+            <form id="houseForm">
+                <div class="form-group">
+                    <label>Nome do Imóvel *</label>
+                    <input type="text" id="fNome" placeholder="Ex: Rua das Flores — Centro" required>
+                </div>
+                <div class="form-group">
+                    <label>Localização *</label>
+                    <input type="text" id="fLocalizacao" placeholder="Endereço completo" required>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Contato (nome) *</label>
+                        <input type="text" id="fContato" placeholder="Nome do contato" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Telefone *</label>
+                        <input type="text" id="fTelefone" placeholder="73 99999-0000" required>
+                    </div>
+                </div>
+                <div class="form-row-3">
+                    <div class="form-group">
+                        <label>Preço (R$) *</label>
+                        <input type="number" id="fPreco" placeholder="1500" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Quartos *</label>
+                        <input type="number" id="fQuartos" placeholder="2" min="0" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Banheiros *</label>
+                        <input type="number" id="fBanheiros" placeholder="1" min="0" required>
+                    </div>
+                </div>
+                <div class="form-row-3">
+                    <div class="form-group">
+                        <label>Garagem</label>
+                        <select id="fGaragem">
+                            <option value="false">Não</option>
+                            <option value="true">Sim</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Mobília</label>
+                        <select id="fMobilia">
+                            <option value="sem">Sem mobília</option>
+                            <option value="semi">Semi-mobiliado</option>
+                            <option value="mobiliado">Mobiliado</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Status</label>
+                        <select id="fStatus">
+                            <option value="available">Disponível</option>
+                            <option value="discarded">Descartada</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Visita agendada</label>
+                    <input type="text" id="fAgendamento" placeholder="Ex: 22/02 às 14h (deixe vazio se não agendou)">
+                </div>
+                <hr class="form-divider">
+                <div class="form-group">
+                    <label>Link do anúncio (Facebook)</label>
+                    <input type="url" id="fFacebook" placeholder="https://facebook.com/marketplace/...">
+                </div>
+                <div class="form-group">
+                    <label>Adicionado por *</label>
+                    <input type="text" id="fAdicionadoPor" placeholder="Seu nome" required>
+                </div>
+                <button type="submit" class="form-submit">✅ Cadastrar Imóvel</button>
+            </form>
+        </div>
+    </div>
+
     <!-- FOOTER -->
     <footer class="footer">
-        <p>Catálogo de Casas · Atualizado em Fev 2026</p>
+        <p>Análise de Imóveis · Atualizado em Fev 2026</p>
     </footer>
 
     <script>
         // ====== DATA ======
+        const savedCasas = JSON.parse(localStorage.getItem('casas_extras') || '[]');
         const casas = [
             {
                 id: 1,
@@ -916,7 +1189,7 @@
                     "Condominio Eco America - 1400/571193804_1512231596639655_5800142737764555730_n.jpg"
                 ]
             }
-        ];
+        ].concat(savedCasas);
 
         // ====== SVG ICONS ======
         const icons = {
@@ -996,6 +1269,7 @@
                             ${icons.phone}
                             <span><strong>${casa.contato}</strong> · ${casa.telefone}</span>
                         </div>
+                        ${casa.adicionadoPor ? `<div class="card__contact" style="margin-bottom:12px;font-size:0.78rem;"><span>📝</span><span>Adicionado por <strong>${casa.adicionadoPor}</strong></span></div>` : ''}
                         <div class="card__actions">
                             ${casa.fotos.length > 0 ? `<button class="btn btn--gallery" onclick="openGallery(${casa.id})">${icons.images} Ver Fotos</button>` : ''}
                             <a class="btn btn--whatsapp" href="${whatsappLink(casa.telefone, casa.nome)}" target="_blank" rel="noopener">${icons.whatsapp} WhatsApp</a>
@@ -1125,6 +1399,61 @@
                 galleryIndex = (galleryIndex + 1) % galleryPhotos.length;
                 updateGalleryImage();
             }
+        });
+
+        // ====== FORM LOGIC ======
+        document.getElementById('btnAddHouse').addEventListener('click', () => {
+            document.getElementById('formOverlay').classList.add('open');
+            document.body.style.overflow = 'hidden';
+        });
+
+        document.getElementById('formClose').addEventListener('click', () => {
+            document.getElementById('formOverlay').classList.remove('open');
+            document.body.style.overflow = '';
+        });
+
+        document.getElementById('formOverlay').addEventListener('click', (e) => {
+            if (e.target === e.currentTarget) {
+                document.getElementById('formOverlay').classList.remove('open');
+                document.body.style.overflow = '';
+            }
+        });
+
+        document.getElementById('houseForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const novaCasa = {
+                id: Date.now(),
+                nome: document.getElementById('fNome').value,
+                contato: document.getElementById('fContato').value,
+                telefone: document.getElementById('fTelefone').value,
+                preco: Number(document.getElementById('fPreco').value),
+                localizacao: document.getElementById('fLocalizacao').value,
+                quartos: Number(document.getElementById('fQuartos').value),
+                banheiros: Number(document.getElementById('fBanheiros').value),
+                garagem: document.getElementById('fGaragem').value === 'true',
+                agendamento: document.getElementById('fAgendamento').value || null,
+                mobilia: document.getElementById('fMobilia').value,
+                status: document.getElementById('fStatus').value,
+                facebookUrl: document.getElementById('fFacebook').value || '#',
+                adicionadoPor: document.getElementById('fAdicionadoPor').value,
+                fotos: []
+            };
+
+            // Save to localStorage
+            const extras = JSON.parse(localStorage.getItem('casas_extras') || '[]');
+            extras.push(novaCasa);
+            localStorage.setItem('casas_extras', JSON.stringify(extras));
+
+            // Add to current list and re-render
+            casas.push(novaCasa);
+            render();
+
+            // Close form and reset
+            document.getElementById('formOverlay').classList.remove('open');
+            document.body.style.overflow = '';
+            document.getElementById('houseForm').reset();
+
+            alert('Imóvel cadastrado com sucesso! ✅');
         });
 
         // ====== INIT ======
