--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
                 </div>
                 <hr class="form-divider">
                 <div class="form-group">
+                    <label>Fotos do Imóvel</label>
+                    <div class="upload-area" id="uploadArea">
+                        <div class="upload-area__icon">📷</div>
+                        <p class="upload-area__text">Arraste fotos aqui ou <label for="fFotos"
+                                class="upload-area__link">escolha arquivos</label></p>
+                        <p class="upload-area__hint">JPEG/PNG · Máx. ~8 fotos · Comprimidas automaticamente</p>
+                        <input type="file" id="fFotos" multiple accept="image/*" class="upload-area__input">
+                    </div>
+                    <span id="uploadStatus" class="upload-status"></span>
+                    <span id="photoCounter" class="photo-counter"></span>
+                    <div class="photo-preview-grid" id="photoPreview"></div>
+                </div>
+                <div class="form-group">
                     <label>Link do anúncio (Facebook)</label>
                     <input type="url" id="fFacebook" placeholder="https://facebook.com/marketplace/...">
                 </div>
