adiciona edicao e exclusao de imoveis

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="form-overlay" id="formOverlay">
         <div class="form-modal">
             <div class="form-modal__header">
-                <div class="form-modal__title">🏠 Cadastrar Novo Imóvel</div>
+                <div class="form-modal__title" id="formModalTitle">🏠 Cadastrar Novo Imóvel</div>
                 <button class="form-modal__close" id="formClose" title="Fechar">✕</button>
             </div>
             <form id="houseForm">
@@ -146,7 +146,7 @@
                     <label>Adicionado por *</label>
                     <input type="text" id="fAdicionadoPor" placeholder="Seu nome" required>
                 </div>
-                <button type="submit" class="form-submit">✅ Cadastrar Imóvel</button>
+                <button type="submit" class="form-submit" id="formSubmitBtn">✅ Cadastrar Imóvel</button>
             </form>
         </div>
     </div>
